fixed flex wrap for project area

--- a/index.css
+++ b/index.css
@@ -175,6 +175,8 @@ a {
 
 .my-proj {
   flex: 2;
+  display: flex;
+  flex-direction: column;
   padding: 10px;
 }
 
@@ -186,6 +188,7 @@ a {
 }
 
 .card {
+  flex: 1 1 auto;
   width: 360px;
   height: 200px;
   box-sizing: border-box;
@@ -206,8 +209,7 @@ a {
 
 .anoun {
   display: flex;
-  width: 380px;
-  height: 670px;
+  flex: 1;
   gap: 15px;
   flex-direction: column;
   padding: 10px;
